--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.11"
 [tool.setuptools.dynamic]
 dependencies = {file = "requirements.txt"}
 readme = {file = "README.md"}
-version = {attr = "src.__version__"}
+version = {attr = "temporary-python-project.__version__"}
 
 [project.optional-dependencies]
 all = ["temporary-python-project[dev]"]
@@ -15,7 +15,7 @@ dev = ["pip-tools", "ruff", "temporary-python-project[test]"]
 test = ["pytest", "pytest-cov"]
 
 [tool.setuptools.package-dir]
-"temporary-python-project" = "temporary_python_project"
+"temporary-python-project" = "temporary-python-project"
 
 [tool.pytest.ini_options]
 addopts = [
