--- a/.github/workflows/qc-and-test.yaml
+++ b/.github/workflows/qc-and-test.yaml
@@ -14,7 +14,9 @@ jobs:
           python-version: "3.11"
           cache: "pip"
       - name: Install dependencies
-        run: pip install -e .[all]
+        run: |
+          git config --global url."https://${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "ssh://git@github.com/"
+          pip install -e .[all]
 
       - name: Unit tests [pytest]
         run: |
