--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,7 @@ permissions:
 
 jobs:
   release:
+    if: ${{github.repository != 'mahdilamb/python-template'}}
     name: "Create release"
     runs-on: ubuntu-latest
     steps:
@@ -44,18 +45,19 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            const description = (await github.rest.repos.listPullRequestsAssociatedWithCommit({
+            const associatedPR = (await github.rest.repos.listPullRequestsAssociatedWithCommit({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 commit_sha: process.env.GITHUB_SHA,
-            })).data[0].body;
+            })).data.filter((pr) => pr.state === "closed" || pr.closed_at)
+            .sort((a, b) => new Date(a.closed_at) - new Date(b.closed_at))[0];
             const tagName = 'v${{steps.version.outputs.version}}'
             github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: tagName,
               draft: false,
-              body: description,
               make_latest: 'true',
-              name: tagName
+              name: `${tagName}: ${associatedPR.title}`,
+              body: associatedPR.body,
             })
